WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49201
Crash when closing a page
https://bugs.webkit.org/show_bug.cgi?id=49201
Summary
Crash when closing a page
Alexey Proskuryakov
Reported
2010-11-08 13:13:54 PST
I didn't handle null frame in focusedFrameChanged()
Attachments
proposed fix
(2.25 KB, patch)
2010-11-08 13:15 PST
,
Alexey Proskuryakov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-11-08 13:15:07 PST
Created
attachment 73272
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2010-11-08 13:23:45 PST
Committed <
http://trac.webkit.org/changeset/71565
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug