        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=49201
        Crash when closing a page

        Handle null frame by passing a 0 frame id (normal ones start from 1).

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::focusedFrameChanged):
        * WebProcess/WebCoreSupport/WebChromeClient.cpp:
        (WebKit::WebChromeClient::focusedFrameChanged):



Canonical link: https://commits.webkit.org/62052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71565 268f45cc-cd09-0410-ab3c-d52691b4dbfc